# orthographic-projection

./: .gitignore  README.md  koppen.py  ortho.py  pyproject.toml  requirements.txt
tests/: test_ortho.py
